welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:2: error: not found: value Direction
  setDirection(Direction.EST)
               ^DwarfCode:7: error: not found: value prendre
  prendre()
  ^DwarfCode:11: error: not found: value Direction
  setDirection(Direction.OUEST)
               ^